versioned_docs/version-6.2/client-api/configuration/content/_serialization-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import ContentFrame from "@site/src/components/ContentFrame";

<Admonition type="note" title="">

Use the methods described in this page to customize the [conventions](../conventions.mdx)
by which entities are serialized as they are sent by the client to the server.

* In this page:  
  * [Ignoring a property](#ignoring-a-property)  
  * [CustomizeJsonSerializer](#customizejsonserializer)  
  * [JsonContractResolver](#jsoncontractresolver)  
  * [BulkInsert.TrySerializeEntityToJsonStream](#bulkinserttryserializeentitytojsonstream)  
  * [IgnoreByRefMembers and IgnoreUnsafeMembers](#ignorebyrefmembers-and-ignoreunsafemembers)  

</Admonition>

<ContentFrame>

## Ignoring a property

* By default, RavenDB serializes **all** properties and **all** public fields of an entity.  
* Decorate a property with `[JsonIgnore]` to exclude it from serialization.  
  The decorated property will not be stored in the document and will not be available for indexing.  
* `[JsonIgnore]` is from the `Newtonsoft.Json` namespace.  

```csharp
public class Shirt
{
    public string Id { get; set; }

    // Stored in the document
    public decimal Price { get; set; }

    // Not stored - computed from Price at runtime
    [JsonIgnore]
    public decimal PriceWithTax => Price * 1.2m;
}
```

</ContentFrame>

---

<ContentFrame>

## CustomizeJsonSerializer

* The `JsonSerializer` object is used by the client to serialize entities
  sent by the client to the server.  
* Use the `CustomizeJsonSerializer` convention to modify `JsonSerializer`
  by registering a serialization customization action.  

```csharp
Serialization = new NewtonsoftJsonSerializationConventions
{
    CustomizeJsonSerializer = serializer => throw new CodeOmitted()
}
```

</ContentFrame>

---

<ContentFrame>

## JsonContractResolver

* The default `JsonContractResolver` convention used by RavenDB will serialize
  **all** properties and **all** public fields.  
* Change this behavior by providing your own implementation of the `IContractResolver`
  interface.  

```csharp
Serialization = new NewtonsoftJsonSerializationConventions
{
    JsonContractResolver = new CustomJsonContractResolver()
}
```

```csharp
public class CustomJsonContractResolver : IContractResolver
{
    public JsonContract ResolveContract(Type type)
    {
        throw new CodeOmitted();
    }
}
```

* You can also customize the behavior of the **default resolver** by inheriting
  from `DefaultRavenContractResolver` and overriding specific methods.  

```csharp
public class CustomizedRavenJsonContractResolver : DefaultRavenContractResolver
{
    public CustomizedRavenJsonContractResolver(ISerializationConventions conventions) : base(conventions)
    {
    }

    protected override JsonProperty CreateProperty(MemberInfo member, MemberSerialization memberSerialization)
    {
        throw new CodeOmitted();
    }
}
```

</ContentFrame>

---

<ContentFrame>

## BulkInsert.TrySerializeEntityToJsonStream

* Adjust [Bulk Insert](../../bulk-insert/how-to-work-with-bulk-insert-operation.mdx)
  behavior by using the `TrySerializeEntityToJsonStream` convention to register a custom
  serialization implementation.  

```csharp
BulkInsert =
{
    TrySerializeEntityToJsonStream = (entity, metadata, writer) => throw new CodeOmitted(),
}
```

</ContentFrame>

---

<ContentFrame>

## IgnoreByRefMembers and IgnoreUnsafeMembers

* By default, if you try to store an entity with `ref` or unsafe members,
  the Client will throw an exception when [`session.SaveChanges()`](../../session/saving-changes.mdx)
  is called.  
* Set the `IgnoreByRefMembers` convention to `true` to simply ignore `ref`
  members when an attempt to store an entity with `ref` members is made.  
  The entity will be uploaded to the server with all non-`ref` members without
  throwing an exception.  
  The document structure on the server-side will not contain fields for those
  `ref` members.  
* Set the `IgnoreUnsafeMembers` convention to `true` to ignore all pointer
  members in the same manner.  
* `IgnoreByRefMembers` default value: `false`  
* `IgnoreUnsafeMembers` default value: `false`  

</ContentFrame>
